# java_standalone_desktop_app_demo

./: .gitignore  README.MD  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
launcher/: CMakeLists.txt  main.c
src/main/java/com/github/drewchase/: Main.java
